# multiscoresplot

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
api/colorspace/: index.html
api/interactive/: index.html
api/legend/: index.html
api/pipeline/: index.html
api/plotting/: index.html
api/scoring/: index.html
changelog/: index.html
docs/: changelog.md  examples.md  getting-started.md  index.md  pipeline.md
docs/api/: colorspace.md  index.md  interactive.md  legend.md  pipeline.md  plotting.md  scoring.md
examples/: index.html
getting-started/: index.html
pipeline/: index.html
search/: search_index.json
src/multiscoresplot/: __init__.py  _colorspace.py  _interactive.py  _legend.py  _pipeline.py  _plotting.py  _scoring.py
test_data/: check_scdata.ipynb  scdata.h5ad
tests/: conftest.py  test_colorspace.py  test_interactive.py  test_legend.py  test_pipeline.py  test_placeholder.py  test_plotting.py  test_reduce.py  test_scoring.py
