[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiscoresplot"
version = "2.1.0"
description = "Multi-dimensional gene set scoring and visualization for single-cell transcriptomics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andre Macedo" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "anndata>=0.10",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pyucell>=0.5",
    "scanpy>=1.9",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
interactive = ["plotly>=5.0"]

[project.urls]
Homepage = "https://github.com/AndreMacedo88/multiscoresplot"
Documentation = "https://AndreMacedo88.github.io/multiscoresplot/"
Repository = "https://github.com/AndreMacedo88/multiscoresplot"
Issues = "https://github.com/AndreMacedo88/multiscoresplot/issues"

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.hatch.build.targets.wheel]
packages = ["src/multiscoresplot"]

[dependency-groups]
dev = ["pre-commit>=3.6", "ruff>=0.9"]
test = ["pytest>=8.0", "pytest-cov>=6.0"]
type = ["mypy>=1.13"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.27"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 99
extend-exclude = ["*.ipynb", "uv.lock"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["multiscoresplot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
strict = true
markers = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pyucell",
    "pyucell.*",
    "anndata",
    "anndata.*",
    "scanpy",
    "scanpy.*",
    "pandas",
    "pandas.*",
    "sklearn",
    "sklearn.*",
    "plotly",
    "plotly.*",
    "scipy",
    "scipy.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.coverage.run]
source = ["multiscoresplot"]

[tool.coverage.report]
fail_under = 0
show_missing = true
